<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/clothing"
            android:checked="false"
            android:title="@string/clothing_string" />

        <item
            android:id="@+id/shoes"
            android:checked="false"
            android:title="@string/shoes_string" />

        <item
            android:id="@+id/designer"
            android:checked="false"
            android:title="@string/designer_string" />

        <item
            android:id="@+id/autumn"
            android:checked="false"
            android:title="@string/autumn_string" />


        <item
            android:id="@+id/accessories"
            android:checked="false"
            android:title="@string/accessories_string" />
        <item
            android:id="@+id/bags_purses"
            android:checked="false"
            android:title="@string/bag_purses_string" />
        <item
            android:id="@+id/beauty"
            android:checked="false"
            android:title="@string/beauty_string" />
        <item
            android:id="@+id/coat"
            android:checked="false"
            android:title="@string/coats_jackets_string" />
        <item
            android:id="@+id/curve"
            android:checked="false"
            android:title="@string/curve_string" />
        <item
            android:id="@+id/dresses"
            android:checked="false"
            android:title="@string/dresses_string" />
        <item
            android:id="@+id/jeans"
            android:checked="false"
            android:title="@string/jeans_string" />
        <item
            android:id="@+id/jewellery"
            android:checked="false"
            android:title="@string/jewellery_string" />
        <item
            android:id="@+id/jumpers_cardigans"
            android:checked="false"
            android:title="@string/jumpers_cardigans_string" />

    </group>
</menu>